Fixed a slight UI bug on mobile devices

--- a/style.css
+++ b/style.css
@@ -242,10 +242,24 @@ body.active::before{
   .cell {
     font-size: 2.5rem;
   }
+
+  .enemy{
+  margin: 0.7rem;
+  background-color: var(--bg-color);
+  padding: 1rem;
+  padding-left: 1.5rem;
+  font-size: 2rem;
+  text-align: center;
+  border-radius: 15px;
+  cursor: pointer;
+  }
   
 }
 
 @media (max-width: 599px){
+  .title{
+    font-size: 1.5rem;
+  }
   .marker{
   margin: 1rem;
   background-color: var(--bg-color);
